--- a/public/style-light.css
+++ b/public/style-light.css
@@ -1,11 +1,15 @@
+html {
+    background-color: #fff;
+}
+
 body {
-  background-color: white;
+    background-color: white;
 }
 
 .table-sticky-container thead tr th {
-  background-color: #ececec;
+    background-color: #ececec;
 }
 
 .table-sticky-container tbody tr th {
-  background-color: #ececec;
+    background-color: #ececec;
 }
